# ks3-rust-sdk

./: Cargo.toml
src/: lib.rs  request.rs  s3.rs
src/core/: client.rs  encoding.rs  error.rs  mod.rs  region.rs  request.rs
src/core/proto/json/: error.rs  payload.rs
src/core/proto/xml/: error.rs  util.rs
src/credential/: container.rs  environment.rs  instance_metadata.rs  mod.rs  profile.rs  request.rs  static_provider.rs
src/signature/: ks_time.rs  mod.rs  region.rs  signer.rs  stream.rs
