[package]
name = "ks3"
version = "0.1.0"
authors = ["Xu Qiaolun <Jamesxql@Gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
hyper = "0.13.9"
serde_json = "1.0"
tokio = { version = "0.3.4", features = ["macros", "process", "sync", "time"] }
dirs = "3.0.1"
regex = "1.4.2"
shlex = "0.1"
futures = "0.3"